refactor: alter to clean Arch

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 gateway/node_modules
 gateway/tokens
-Api/.vs
-Api/bin
-API/obj
+gateway/qrcode_wpp_service.png
+
+backend/*/.vs
+backend/*/bin
+backend/*/obj
