feat: implement azure data table to save info

--- a/backend/Api/appsettings.Development.json
+++ b/backend/Api/appsettings.Development.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "WppConnectService": {
     "BaseUrl": "http://localhost:3020/api/whatsapp"
+  },
+  "ConnectionStrings": {
+    "AzureTableStorage": "DefaultEndpointsProtocol=https;AccountName=radarsolidario;AccountKey=abc;EndpointSuffix=core.windows.net"
   }
 }
